Revision history for perl distribution Mojo-GoogleAnalytics

0.02 Not Released
 - Fix $err is not a hash ref

0.01 2017-07-24T13:39:40+0200
 - Created Mojo::GoogleAnalytics
 - Created Mojo::GoogleAnalytics::Report