@@ -2,6 +2,8 @@ Revision history for perl distribution Mojo-GoogleAnalytics
 
 0.02 Not Released
  - Fix $err is not a hash ref
+ - Add view_id() attribute
+ - Add get_report() method
 
 0.01 2017-07-24T13:39:40+0200
  - Created Mojo::GoogleAnalytics
